--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,17 @@
-version: '3.8'
-services:
-  webserver:
-    image: httpd
-  opSystem:
-    image: ubuntu
-    tty: true
-    stdin_open: true
+version: '3.3'
 
+services:
+  jenkins:
+    image: jenkins:2.60.3
+    ports:
+      - 8081:8080
+      - 50000:50000
+    volumes:
+      - ./jenkins:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /usr/local/bin/docker:/usr/local/bin/docker
+    networks:
+      - jenkins
+
+networks:
+  jenkins:
