--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.3'
 
 services:
   jenkins:
-    image: jenkins:2.60.3
+    image: jenkins/jenkins:lts
     ports:
       - 8081:8080
       - 50000:50000
